assets/css/styles.css
/* ... */
.contact .info .sub-title {
  color: #4a77a2;
  margin-bottom: 30px;
  margin-top: 0;
}
.contact .social-icons {
  list-style: none;
  padding: 10px 0;
  margin-bottom: 0;
  display: inline-block;
  margin: 0 auto;
}
.contact .social-icons li {
  float: left;
}
.contact .social-icons li.last {
  margin-right: 0;
}
.contact .social-icons a {
  display: inline-block;
  background: #426a90;
  width: 48px;
  height: 48px;
  text-align: center;
  padding-top: 12px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  -ms-border-radius: 50%;
  -o-border-radius: 50%;
  border-radius: 50%;
  -moz-background-clip: padding;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  margin-right: 8px;
  float: left;
}
.contact .social-icons a:hover {
  background: #f04085;
}
.contact .social-icons a .fa {
  color: #fff;
}
.contact .social-icons a .fa:before {
  font-size: 26px;
  text-align: center;
  padding: 0;
}
/* ======= Footer ======= */
.footer {
  padding: 15px 0;
  background: #1a2a39;
  color: #fff;
}
.footer .copyright {
  -webkit-opacity: 0.8;
  -moz-opacity: 0.8;
  opacity: 0.8;
}
.footer .fa-heart {
  color: #fb866a;
}
/* Extra small devices (phones, less than 768px) */
@media (max-width: 767px) {
  .header .main-nav button {
    margin-right: 0;
  }
  .header .main-nav .navbar-collapse {
    padding-left: 15px;
    padding-right: 15px;
  }
  .promo .btns .btn {
    margin-right: 0;
    clear: both;
    display: block;
    margin-bottom: 30px;
  }
  .promo .title {
    font-size: 66px;
  }
  .promo .meta {
    margin-top: 60px;
  }
  .promo .meta li {
    float: none;
    display: block;
    margin-bottom: 5px;
  }
  .contact .author-message {
    text-align: center;
  }
  .contact .author-message .profile {
    position: static;
    margin: 0 auto;
    margin-bottom: 30px;
  }
  .contact .author-message .speech-bubble {
    margin-left: 0;
  }
  .contact .author-message .speech-bubble:after {
    display: none;
  }
  .contact .social-icons a {
    width: 36px;
    height: 36px;
    padding-top: 7px;
    margin-right: 2px;
  }
  .contact .social-icons a .fa:before {
    font-size: 18px;
  }
}
/* Small devices (tablets, 768px and up) */
/* Medium devices (desktops, 992px and up) */
/* Large devices (large desktops, 1200px and up) */


/**** CUSTOM CSS ****/

.title-highlight {
 color: #f46fa3;
}

.contact {
 background: #F5F5F5;
}

.contact-text-center {
 text-align: center;
 color: #4A77A2;
}

.logo-title {
 color: #6690B9;
}

/** Skills Bars **/
/* Make sure that padding behaves as expected */
* {box-sizing:border-box}

/* Container for skill bars */
.skills-container {
    width: 100%; /* Full width */
}

.skills {
    text-align: right; /* Right-align text */
    padding-right: 20px; /* Add some right padding */
    line-height: 40px; /* Set the line-height to center the text inside the skill bar, and to expand the height of the container */
    color: white; /* White text color */
}

.server {width: 85%; background-color: #98baf2; margin-bottom: 20px; right: -14px; position: relative;}
.scripting {width: 85%; background-color: #a9afba; margin-bottom: 20px;} 
.linux {width: 80%; background-color: #1e417a; margin-bottom: 20px;} 
.webdev {width: 70%; background-color: #82adf2; margin-bottom: 20px;} 
.programming {width: 60%; background-color: #2e3644; margin-bottom: 20px;}
.python {width: 50%; background-color: #347cf9;}

.about-container {background-color: #f5f5f5;}

.profilepic { 
 vertical-align: middle;
 border-radius: 50%; 
}

/* CSS for mobile devices */

@media only screen and (max-width: 600px)  {
 
 html {
 overflow-x: hidden;
 }

 .server {
 width: 76%;
 }
 
 .title-highlight {
 display: block;
 color: #f46fa3;
 }

 .github-content {
 padding-left: 0px;
 }
}

@media only screen and (min-device-width: 600px) and (max-device-width: 800px) {
 .server {
 width: 79%;
 }

}

